[tool.poetry]
name = "nautobot_jobs"
version = "0.1.0"
description = ""
authors = ["James Williams <amascuba@gmail.com>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
